--- a/about.html
+++ b/about.html
@@ -13,11 +13,81 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Yesteryear&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
   <body>
+    <!-- Muruvvet Header Hero Start-->
+    <div class="about-page-hero">
+      <header class="hero-section">
+        <div class="hes-hero">
+          <input type="checkbox" name="" id="hes-check" />
+          <div class="hes-header-logo">
+            <img src="images/logo.png" alt="" />
+          </div>
+
+          <div class="hes-nav">
+            <div class="hes-links">
+              <ul>
+                <li class="hes-link" style="--i: 0.6s">
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="hes-link" style="--i: 0.85s">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="hes-link" style="--i: 1.1s">
+                  <a href="#"
+                    >Services <i class="fa-solid fa-caret-down"></i
+                  ></a>
+                  <div class="hes-dropdown">
+                    <ul>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Honeymoon Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Tours Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Musical Events</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Build Package</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="hes-link" style="--i: 1.35s">
+                  <a href="#">Upcomming Packages</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="hes-action-btn" style="--i: 1.8s">
+              <a href="#" class="hes-btn">Get in Touch</a>
+            </div>
+          </div>
+
+          <div class="hes-hamburger-menu-container">
+            <div class="hes-hamburger-menu">
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="hes-title-box">
+        <p class="ms-read">READ</p>
+        <p class="ms-about-us">About Us</p>
+      </div>
+    </div>
+    <!-- Muruvvet Header Hero End-->
     <!-- Erkin About Promotion Start-->
     <div class="about-promotion">
       <div class="about-promotion-container">
@@ -187,5 +257,6 @@
       </div>
     </div>
     <!-- Esra Explore Packages Section END-->
+    <script src="js/index.js"></script>
   </body>
 </html>
