--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -438,6 +437,382 @@
       </div>
     </div>
     <!-- erkin explore section END-->
+    <div class="homepage-tour-package-container">
+      <h5 class="tp-h5">TRENDY</h5>
+      <h2 class="tp-h2">Our Trending Tour Packages</h2>
+
+      <div class="homepage-tour-package-container-box">
+        <div class="tp-box">
+          <div class="tp-box-images">
+            <img
+              class="tp-box-image"
+              src="images/hometour-packages-switzerland.png"
+              alt="isviçre image"
+            />
+            <img
+              class="tp-box-flag"
+              src="images/swiss-flag.png"
+              alt="isviçre flag image"
+            />
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-calender-icon.png"
+                alt="calender icon"
+              />
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-user-icon.png"
+                style="object-fit: contain"
+                alt="user icon"
+              />
+              <p>25 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Switzerland</h4>
+            <span class="tp-box-spans-star">
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img
+              src="images/hometour-packages-location-icon.png"
+              alt="location icon"
+            />
+            <p>Europe</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,000 $</h4>
+            <h5>1,200 $</h5>
+          </div>
+
+          <p class="tp-box-p">
+            Nam exercitationem commodi et ducimus quia in dolore<br />
+            animi sit mollitia amet id quod eligendi. Et labore harum<br />
+            non nobis ipsum eum molestias mollitia et corporis<br />
+            praesentium a laudantium internos.
+          </p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
+        <div class="tp-box">
+          <div class="tp-box-images">
+            <img
+              class="tp-box-image"
+              src="images/hometour-packages-brazil.png"
+              alt="brazil image"
+            />
+            <img
+              class="tp-box-flag"
+              src="images/brazil-flag.png"
+              alt="brazil flag image"
+            />
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-calender-icon.png"
+                alt="calender icon"
+              />
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-user-icon.png"
+                style="object-fit: contain"
+                alt="user icon"
+              />
+              <p>30 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Amazon</h4>
+            <span class="tp-box-spans-star">
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img
+              src="images/hometour-packages-location-icon.png"
+              alt="location icon"
+            />
+            <p>Brazil</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,223 $</h4>
+            <h5>1,300 $</h5>
+          </div>
+          <p class="tp-box-p">
+            Nam exercitationem commodi et ducimus quia in dolore<br />
+            animi sit mollitia amet id quod eligendi. Et labore harum<br />
+            non nobis ipsum eum molestias mollitia et corporis<br />
+            praesentium a laudantium internos.
+          </p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
+        <div class="tp-box">
+          <div class="tp-box-images">
+            <img
+              class="tp-box-image"
+              src="images/hometour-packages-eygpt.png"
+              alt="brazil image"
+            />
+            <img
+              class="tp-box-flag"
+              src="images/egypt-flag.png"
+              alt="brazil flag image"
+            />
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-calender-icon.png"
+                alt="calender icon"
+              />
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img
+                src="images/hometour-packages-user-icon.png"
+                style="object-fit: contain"
+                alt="user icon"
+              />
+              <p>155 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Giza</h4>
+            <span class="tp-box-spans-star">
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+              <img
+                src="images/hometour-packages-star-img.png"
+                alt="star icon"
+              />
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img
+              src="images/hometour-packages-location-icon.png"
+              alt="location icon"
+            />
+            <p>Egypt</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,300 $</h4>
+            <h5>1,450 $</h5>
+          </div>
+          <p class="tp-box-p">
+            Nam exercitationem commodi et ducimus quia in dolore<br />
+            animi sit mollitia amet id quod eligendi. Et labore harum<br />
+            non nobis ipsum eum molestias mollitia et corporis<br />
+            praesentium a laudantium internos.
+          </p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
+      </div>
+    </div>
+    <!-- esra homepage tour package END-->
+    <!-- Muruvvet Testimonials Start-->
+    <div class="homepage-testimonials">
+      <div class="testimonials-container">
+        <div class="tc-testimonial-section">
+          <div class="ts-title-box">
+            <div class="tb-subheading">
+              <h4>PROMOTION</h4>
+            </div>
+            <div class="tb-heading">
+              <h4>See What Our Clients Say About Us</h4>
+            </div>
+          </div>
+          <div class="ts-script-box">
+            <img
+              class="sb-designer-image"
+              src="images/testimonial-section-box-pp-img.png"
+              alt="Designer Photo"
+            />
+
+            <div class="sb-writing-box">
+              <p class="wb-paragraph">
+                Vel officiis dolor ea illo aut eligendi ullam non laudantium
+                magnam et recusandae molestiae sit iure unde aut voluptate
+                quaerat. Id sunt provident quo possimus impedit vel doloremque
+                obcaecati qui ullam consectetur et ipsum omnis.
+              </p>
+              <p class="wb-footer">Christine Beckam - Designer</p>
+              <img
+                class="wb-double-quotes"
+                src="images/testimonial-box-quotes.png"
+                alt="Double Quotes"
+              />
+              <img
+                class="wb-small-quotes"
+                src="images/Vector-double-quotes.png"
+                alt="Double Quotes"
+              />
+            </div>
+
+            <div class="sb-left-arrow">
+              <img src="images/arrow-leeft-icon.png" al0t="Left Arrow" />
+            </div>
+
+            <div class="sb-right-arrow">
+              <img src="images/arrow-right-icon.png" alt="Right Arrow" />
+            </div>
+          </div>
+        </div>
+
+        <div class="tc-pagination">
+          <img src="images/Pagination.png" alt="Pagination" />
+        </div>
+      </div>
+      <img
+        class="tc-hat-image"
+        src="images/testimonial-section-hat-img.png"
+        alt="Hat Image"
+      />
+      <img
+        class="tc-seashell-image"
+        src="images/testimonial-section-seashell-img.png"
+        alt="Seashell Image"
+      />
+      <img
+        class="tc-place-image"
+        src="images/testimonial-section-photo-img.png"
+        alt="Place Image"
+      />
+    </div>
+    <!-- Muruvvet Testimonials End-->
+    <!-- Yasemin Homepage Footer Start-->
+
+    <footer class="homepage-footer">
+      <div class="footer-container">
+        <div class="footer-main">
+          <div class="footer-column-one">
+            <img src="images/travel-logo.png" />
+
+            <p class="text-container">
+              Travel helps companies <br />
+              manage payments easily.
+            </p>
+
+            <div class="footer-icons">
+              <a href="#" class="social-icon"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="#" class="social-icon"
+                ><i class="fa-brands fa-facebook-messenger"></i
+              ></a>
+              <a href="#" class="social-icon"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a href="#" class="social-icon"
+                ><i class="fa-brands fa-facebook-messenger"></i
+              ></a>
+            </div>
+          </div>
+
+          <div class="footer-column-two">
+            <h3 class="footer-heading">Company</h3>
+            <a href="#" class="footer-link">About Us</a>
+            <a href="#" class="footer-link">Careers</a>
+            <a href="#" class="footer-link">Blog</a>
+            <a href="#" class="footer-link">Pricing</a>
+          </div>
+
+          <div class="footer-column-three">
+            <h3 class="footer-heading">Destinations</h3>
+            <a href="#" class="footer-link">Maldives</a>
+            <a href="#" class="footer-link">Los Angeles</a>
+            <a href="#" class="footer-link">Las Vegas</a>
+            <a href="#" class="footer-link">Toronto</a>
+          </div>
+
+          <div class="footer-column-four">
+            <h3 class="footer-heading">Join Our Newsletter</h3>
+
+            <div class="footer-input">
+              <input
+                class="footer-int"
+                type="text"
+                placeholder="Your email adress"
+              />
+
+              <button class="footer-btn">Subscribe</button>
+            </div>
+
+            <p class="column-four-text">
+              . Will send you weekly updates for your better <br />
+              tour packages.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <hr class="footer-line" />
+
+      <div class="footer-copyright">
+        <span class="copyright"
+          >Copyright @ Xpro 2022. All Rights Reserved</span
+        >
+      </div>
+      <img class="footer-bg" src="images/footer-bg.png" alt="" />
+    </footer>
     <!--Bu div en aşağıda kalmalı / id="test"-->
     <div id="test"></div>
     <script src="js/index.js"></script>
